--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="card" style="width: 18rem;">
         <img src="./assets/img/sass.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title text-center">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-purple text-white">Go somewhere</a>
+          <a href="#" class="btn btn-purple text-white ">Go somewhere</a>
         </div>
       </div>
 </body>
